alignment corrections

--- a/style.css
+++ b/style.css
@@ -75,11 +75,10 @@ button {
   padding: 15px 15px;
   text-align: center;
   text-decoration: none;
-  display: inline-block;
   font-size: 30px;
   margin-left: auto;
   margin-right: auto;
-
+  align-content: center;
     border-radius: 12px;
   margin-top: 50px;
   font-family: cursive
